# FFServer

./: .gitignore  Dockerfile  NTE_demo.cif  README.md  WINDOWS_INSTALL_GUIDE.md  api.py  app.py  batch_analysis.py  build_container.sh  cif_editor.py  demo_NequipOLM.py  entrypoint.sh  force_restart.sh  nohup.out  notifications.py  queue_manager.py  queue_manager_cli.py  setup_wsl2.sh  simulation_utils.py  start_all.sh  start_app.sh  supervisord.conf  visualization.py  worker.py
.ipynb_checkpoints/: app-checkpoint.py  cif_editor-checkpoint.py  gitignore-checkpoint  nohup-checkpoint.out  simulation_utils-checkpoint.py  untitled-checkpoint.txt  worker-checkpoint.py
MatRIS/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
MatRIS/example/: test_ralexation.py
MatRIS/example/cif_file/: demo.cif
MatRIS/matris/: __init__.py
MatRIS/matris/applications/: __init__.py  base.py  md.py  relax.py
MatRIS/matris/graph/: __init__.py  converter.py  cygraph.c  cygraph.pyx  radiusgraph.py  setup.py
MatRIS/matris/model/: __init__.py  basis_function.py  feature_embed.py  functions.py  interaction_block.py  model.py  processgraph.py  readout.py  reference_energy.py
MatRIS/matris/model/op/: __init__.py  fuse_basis_func.py  fuse_sigmoid_op.py  fused_silu_op.py
MatRIS/matris/model/op/src/: Opdefine.h  RegisterOp.cpp  setup.py
MatRIS/matris/model/op/src/cpp/: fused_silu.cpp
MatRIS/matris/model/op/src/kernel/: fused_silu_bwd.cu  fused_silu_grad_bwd.cu  type_shim.h
frontend/: index.html  package.json  vite.config.js
mattersim_service/: Dockerfile  server.py
(+2 files in other folders)
