[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matris"
dynamic = ["version"]
authors = [
    {name = "HPC-AI-Team"},
]
requires-python = ">=3.10"
description = "MatRIS model"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "ase>=3.23.0",
    "numpy>=2.0.0",
    "pymatgen>=2024.9.10",
    "torch>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/HPC-AI-Team/MatRIS"
Repository = "https://github.com/HPC-AI-Team/MatRIS"
Issues = "https://github.com/HPC-AI-Team/MatRIS/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["matris*"] 
